# rendergit-lite

./: README.md  pyproject.toml  rendergit.py
rendergit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rendergit_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
