[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rendergit-lite"
version = "0.1.0"
description = "Interactive GitHub repo viewer with selectable folders/files and improved UI"
readme = "README.md"
license = "0BSD"
authors = [
    {name = "Peter Dunson"},
    {name = "Andrej Karpathy", email = "karpathy@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.8.2",
    "pygments>=2.19.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
rendergit-lite = "rendergit:main"

[project.urls]
Homepage = "https://github.com/peterdunson/rendergit-lite"
Repository = "https://github.com/peterdunson/rendergit-lite"
